# Scentence_deploy

./: .gitignore  README.md  basedpyrightconfig.json  docker-compose.production.yml  docker-compose.yml  example.html  get_color.py  note_desc_dictionary.csv  pyproject.toml  pyrightconfig.json  run-integration-tests.sh  test.ipynb  tools_info_funcs.txt
.github/: DEPLOYMENT.md  README.md
.github/workflows/: deploy.yml  rollback.yml  sync-to-aws-test.yml
backend/: Dockerfile  Dockerfile.production  accord_desc_dictionary.csv  main.py  requirements.txt
backend/agent/: archive_db.py  auth.py  brand_exclusion_parser.py  database.py  denylist.py  expression_loader.py  followup_classifier.py  graph.py  graph_info.py  image_utils.py  personalization.py  prompts.py  schemas.py  storage_s3.py  tools.py  use_case_utils.py  user_mode.py  utils.py
backend/routers/: archive.py  auth.py  perfumes.py  user.py  users.py
backend/scripts/: migrate_profile_images_to_s3.py
backend/tests/: conftest.py  manual_test_followup.py  test_brand_exclusion.py  test_brand_exclusion_e2e.py  test_brand_leakage.py  test_chat_endpoints.py  test_chat_status_routing.py  test_contiguous_number.py  test_count_notice.py  test_fcfs_streaming.py  test_filter_sanitization.py  test_use_case.py  (+16 more)
docs/: deploy-ec2.md
frontend/: Dockerfile.production  middleware.ts  next.config.ts
layering/: Dockerfile.production  main.py  reproduce_issue.py  requirements.txt
mds/: deploy-ec2.md  fast.md
scentmap/: Dockerfile  Dockerfile.production  db.py  main.py  requirements.txt
scripts/: deploy.sh  rollback.sh
(+85 files in other folders)
